# agora-ai-engine

./: .dockerignore  .env.example  .gitignore  AUDIO_CHUNK_INTEGRATION.md  DETAILED_CODE_CHANGES.md  Dockerfile  FAANG_REJOIN_IMPLEMENTATION_PLAN.md  REAL_SYSTEMS_FLOW.md  REJOIN_FEATURE_VERIFICATION.md  REJOIN_IMPLEMENTATION_PLAN_v2.md  agora-ai-engine-architecture.md  main.py  prep_course_test.py  project.md  pyproject.toml  readme.md  requirements.txt  scratch.py  scratch_check_db.py  test_readme.md  test_redis.py
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0966735ff365_initial_schema_with_pgvector_and_ai_logs.py  44fb976e778d_init_complete_schema.py  aec73399851e_add_metadata_fields_to_.py  ebcc6cfe159b_init_complete_schema.py
scratch/: analyze_db.py  cleanup_match_status.py  fix_statuses.py
scripts/: README.md  test_bp_e2e.py  test_case_prep_storage.py  test_debater_pipeline.py  test_e2e_flow.py  test_groq_client.py  test_rag_engine.py  test_redis_connection.py  test_state_manager.py
scripts/ap/: test_case_prep_storage.py  test_debater_pipeline.py  test_e2e_flow.py
scripts/bp/: test_bp_e2e.py  test_case_prep_storage.py  test_debater_pipeline.py  test_e2e_flow.py
src/ai/: agents.py  llm_client.py
src/ai/agents/: sniper.py  (+3 more)
src/api/: __init__.py  dependencies.py
src/core/: cohere_client.py  config.py  database.py  difficulty.py  logging.py  openai_client.py  redis_client.py  security.py
src/engine/: rules.py  state.py
src/models/: __init__.py  debate.py  results.py  setup.py  user.py
src/repositories/: adjudication_repo.py  case_prep_repo.py  debate_repo.py  results_repo.py
src/schemas/: __init__.py  adjudication.py  adjudicator.py  auth.py  common.py  debate_schema.py  event_schema.py  prep_coach_schema.py  state_schema.py  user_schema.py
src/services/: case_prep_service.py  embedding_service.py  grading_service.py  llm_service.py  match_service.py
tests/: conftest.py
(+79 files in other folders)
