[project]
name = "agora-ai-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "alembic>=1.15.2",
    "cohere>=5.21.1",
    "fastapi>=0.135.2",
    "groq>=1.1.2",
    "langchain>=1.2.13",
    "langchain-openai>=1.1.12",
    "langfuse>=4.0.6",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "uvicorn>=0.42.0",
]
